# watch-my-git

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker.yml
src/: config.rs  db.rs  discord.rs  github.rs  main.rs
